feat: Implement core business modules for customer, sales, and inventory management, alongside reporting, PDF generation, and foundational infrastructure components.